[package]
name = "my-reader"
version = "0.0.0"
description = "A project to read my books"
authors = ["wisarmy <wisarmy@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/wisarmy/my-reader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "http-all", "shell-open", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
once_cell = "1.17.1"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.24"
tokio = { version = "1.27.0", features = ["full"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
